# datalad-extension-template

./: .appveyor.yml  .codespellrc  .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements-devel.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: add-changelog-snippet.yml  docbuild.yml  release.yml  test_crippledfs.yml  typing.yml
_datalad_buildsupport/: formatters.py  setup.py
changelog.d/: pr-100.md  pr-108.md  pr-94.md  pr-95.md  pr-98.md
changelog.d/templates/: new_fragment.md.j2
datalad_helloworld/: __init__.py  _version.py  hello_cmd.py
datalad_helloworld/tests/: test_register.py
datalad_publicneuro/: __init__.py
datalad_publicneuro/annexremotes/: uncurl_publicneuro.py
datalad_publicneuro/url_operations/: __init__.py  publicneuro.py
datalad_ria/: __init__.py  _version.py  hello_cmd.py
docs/: Makefile
docs/source/: cli_reference.rst  conf.py  design.rst  for_admins.rst  index.rst  python_reference.rst  quickstart.rst  usage_examples.rst
